<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/shoppingListBuilderBackgroundImage"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mytem_blue_image" />

    <ImageButton
        android:id="@+id/shoppingListBuilderReturnButton"
        android:layout_width="15dp"
        android:layout_height="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="12dp"
        android:backgroundTint="#00FFFFFF"
        android:clickable="true"
        android:focusable="true"
        android:foreground="?android:attr/selectableItemBackgroundBorderless"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/cross" />

    <TextView
        android:id="@+id/shoppingListBuilderHeaderText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:text="@string/shopping_list_builder_header"
        android:textColor="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/shoppingListBuilderInputLayout"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:background="@null"
        android:backgroundTint="#00FFFFFF"
        android:textColorHint="#FFFFFF"
        app:boxBackgroundColor="#FFFFFF"
        app:hintEnabled="false"
        app:layout_constraintBottom_toBottomOf="@+id/shoppingListBuilderBackgroundImage"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/shoppingListBuilderInputText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="#FFFFFF"
            android:drawableTint="#FFFFFF"
            android:hint="@string/shopping_list_builder_description"
            android:inputType="textNoSuggestions"
            android:textColor="#FFFFFF"
            android:textColorHighlight="#FFFFFF"
            android:textColorHint="#FFFFFF"
            android:textColorLink="#FFFFFF" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/shoppingListBuilderAddProductButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:layout_weight="1"
        android:backgroundTint="#555555"
        android:text="@string/shopping_list_builder_add_product"
        android:textColor="#FFFFFF"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListBuilderBackgroundImage" />

    <LinearLayout
        android:id="@+id/shoppingListBuilderListLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/shoppingListBuilderAddProductButton">

        <ListView
            android:id="@+id/shoppingListBuilderList"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>