<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusable="true"
    android:focusableInTouchMode="true">

    <ImageView
        android:id="@+id/mainScreenBackground"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:scaleType="center"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mytem_blue_image" />

    <SearchView
        android:id="@+id/mainScreenSearchView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        android:closeIcon="@drawable/cross_small"
        android:iconifiedByDefault="false"
        android:outlineProvider="none"
        android:queryBackground="@android:color/transparent"
        android:queryHint="@string/search_view_query_hint"
        android:scrollbarAlwaysDrawHorizontalTrack="false"
        android:scrollbarAlwaysDrawVerticalTrack="false"
        android:searchIcon="@drawable/search_icon_small"
        android:theme="@style/SearchViewTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">
    </SearchView>

    <ImageView
        android:id="@+id/mainScreenBanner"
        android:layout_width="300dp"
        android:layout_height="300dp"
        android:layout_marginTop="20dp"
        android:layout_weight="1"
        android:scaleType="centerInside"
        app:layout_constraintHorizontal_bias="0.44"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/main_screen_banner" />

    <TextView
        android:id="@+id/mainScreenBannerReservedText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Reserved."
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="@+id/mainScreenBackground"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/mainScreenTabLayoutBackground"
        android:layout_width="match_parent"
        android:layout_height="30dp"
        android:scaleType="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/mytem_blue_image" />

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/mainScreenTabLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="#00FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tabIndicatorColor="#00FFFFFF"
        app:tabRippleColor="#00FFFFFF"
        app:tabSelectedTextColor="#FFFFFF">

        <com.google.android.material.tabs.TabItem
            android:id="@+id/mainScreenSearchHistoryTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search_history_tab" />

        <com.google.android.material.tabs.TabItem
            android:id="@+id/mainScreenShoppingListTab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/shopping_list_tab" />
    </com.google.android.material.tabs.TabLayout>

    <androidx.viewpager.widget.ViewPager
        android:id="@+id/mainScreenViewPager"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/mainScreenTabLayout" >

    </androidx.viewpager.widget.ViewPager>
</androidx.constraintlayout.widget.ConstraintLayout>